--- a/src/app/dialog/edit-channel/edit-channel.component.scss
+++ b/src/app/dialog/edit-channel/edit-channel.component.scss
@@ -78,6 +78,12 @@ p {
     box-sizing: border-box;
 }
 
+button[disabled]{
+    background-color: #d3d3d3 !important;
+    color: #a1a1a1  !important; 
+    cursor: not-allowed  !important;
+}
+
 .editButton{
     outline: none;
     border: 0px;
