--- a/src/app/main-content/devspace/devspace.component.html
+++ b/src/app/main-content/devspace/devspace.component.html
@@ -61,7 +61,7 @@
                     <img class="userImage" src="{{member.imageUrl}}" alt="Member image">
                     <img class="onlineStatus" [src]="member.status ? '/img/profile-pic/online.svg' : '/img/profile-pic/offline.svg'" alt="Online status">
                 </div>
-                <span class="contactName">{{member.name}}</span>
+                <span class="contactName">{{member.name}} @if(member.id === this.currentMember?.id) {(You)}</span>
             </div>
         </div>
         }
