some chages fo getting respons and infos

--- a/src/app/main-content/login/lost-password/lost-password.component.scss
+++ b/src/app/main-content/login/lost-password/lost-password.component.scss
@@ -32,6 +32,7 @@ p{
     @include heightWidth($w: 75%, $h: auto);
     @include figtree($fw: 400, $fs: clamp(18px,4vw,20px), $c: var(--text-black));
     text-align: center;
+    margin-bottom: 16px;
 }
 
 p.description {
