--- a/src/app/main-content/login/reset-password/reset-password.component.html
+++ b/src/app/main-content/login/reset-password/reset-password.component.html
@@ -23,3 +23,4 @@
     </div>
 
 </section>
+@if(auth.infoBannerIsSubmit){<app-info-banner [text]=auth.infoBannertext [icon]=auth.infoBannerIcon></app-info-banner>}
