--- a/src/app/main-content/message/message-name/message-name.component.html
+++ b/src/app/main-content/message/message-name/message-name.component.html
@@ -1,4 +1,4 @@
 <div class="name" [ngClass]="messageService.checkUser(message) ? 'row-reverse flex-end' : 'flex-start'">
-    <h5 [ngClass]="messageService.checkUser(message) ? 'ml' : 'mr'">{{message.name}}</h5>
+    <h5 (click)="openProfileUser()" [ngClass]="messageService.checkUser(message) ? 'ml' : 'mr'">{{message.name}}</h5>
     <p>{{message.time}}</p>
 </div>
