--- a/src/app/main-content/thread/thread-message-field/thread-message-field.component.html
+++ b/src/app/main-content/thread/thread-message-field/thread-message-field.component.html
@@ -11,9 +11,7 @@
       </ul>
     </div>
   
-    <app-thread-images-preview 
-    [imagePreviewsThread]="imagePreviewsThread"
-    [imageUploadsThread]="imageUploadsThread"></app-thread-images-preview>
+    <app-thread-images-preview></app-thread-images-preview>
   
     <div class="message-field-container">
       <textarea placeholder="Naricht an #Entwicklerteam" [(ngModel)]="messageField" (input)="onInput($event)"></textarea>
