--- a/src/app/main-content/chat/chat-message-field/images-preview/images-preview.component.html
+++ b/src/app/main-content/chat/chat-message-field/images-preview/images-preview.component.html
@@ -1,6 +1,6 @@
 <div class="imgaes-preview-container">
-    <div class="image-container" *ngFor="let preview of imagePreviews; let i = index">
-        <img [src]="preview" alt="Bildvorschau">
-        <button (click)="deleteImage(i)" class="edite-images"><mat-icon>delete</mat-icon></button>
+    <div class="image-container" *ngFor="let attachment of storageService.messageImages; let i = index">
+        <img [src]="attachment" alt="Bildvorschau">
+        <button (click)="deleteImage(attachment, i)" class="edite-images"><mat-icon>delete</mat-icon></button>
     </div>
   </div>
