--- a/src/app/main-content/message/message-reation/message-reation.component.scss
+++ b/src/app/main-content/message/message-reation/message-reation.component.scss
@@ -4,6 +4,7 @@
 
     button {
         @include dFlex();
+        position: relative;
         border: none;
         border: 1px solid var(--purple-2);
         border-radius: 20px;
@@ -21,6 +22,7 @@
             @include nunito($fw: 400, $fs: 18px, $c: var(--text-black));
             margin-left: 10px;
         }
+
         span {
             @include nunito($fw: 400, $fs: 18px, $c: var(--text-black));
         }
@@ -28,5 +30,21 @@
 
     .add-reaction-btn {
         margin-left: 10px;
+    }
+}
+
+.show-members {
+    @include dFlex();
+    width: 100px;
+    height: auto;
+    min-height: 60px;
+    background-color: var(--purple-1);
+    position: absolute;
+    top: -70px;
+    left: 40px;
+    border-radius: 10px 10px 10px 0px;
+
+    p {
+        @include nunito($fw: 400, $fs: 16px, $c: var(--text-black));
     }
 }
