--- a/src/app/main-content/thread/thread-message-field/thread-images-preview/thread-images-preview.component.html
+++ b/src/app/main-content/thread/thread-message-field/thread-images-preview/thread-images-preview.component.html
@@ -1,6 +1,6 @@
 <div class="imgaes-preview-container">
-    <div class="image-container" *ngFor="let preview of imagePreviewsThread; let i = index">
-        <img [src]="preview" alt="Bildvorschau">
-        <button (click)="deleteImage(i)" class="edite-images"><mat-icon>delete</mat-icon></button>
+    <div class="image-container" *ngFor="let attachment of storageService.messageImagesThread; let i = index">
+        <img [src]="attachment" alt="Bildvorschau">
+        <button (click)="deleteImage(attachment, i)" class="edite-images"><mat-icon>delete</mat-icon></button>
     </div>
   </div>
