header profile menue - pipe to currentMember for image and name

--- a/src/app/shared/header/profile-navigation/profile-navigation.component.html
+++ b/src/app/shared/header/profile-navigation/profile-navigation.component.html
@@ -1,7 +1,11 @@
 <nav class="profil"> 
-    <div class="name">Frederik Beck</div>
+    <div class="name">{{ (currentMember$ | async)?.name }}</div>
 
-    <div class="profilPicture"><img src="./img/profile-pic/006.svg">   <div class="statusSymbol"></div> </div>
+    <div class="profilPicture">
+        <img [src]="(currentMember$ | async)?.imageUrl || './img/profile-pic/006.svg'" alt="Profile Picture">
+        <div class="statusSymbol">
+        </div> 
+    </div>
      
     <div class="profilButton" mat-button [matMenuTriggerFor]="profilMenu">
         @if(switchMobilOn){
