--- a/src/app/dialog/create-channel/create-channel.component.scss
+++ b/src/app/dialog/create-channel/create-channel.component.scss
@@ -1,5 +1,9 @@
 @import '../../../mixin.scss';
 
+mat-icon{
+    @include materialSymbols()
+}
+
 .dialogWindow{
     @include padding(40px, 40px, 40px, 40px);
     display: flex;
