--- a/src/app/dialog/edit-channel/edit-channel.component.scss
+++ b/src/app/dialog/edit-channel/edit-channel.component.scss
@@ -1,5 +1,9 @@
 @import '../../../mixin.scss';
 
+mat-icon{
+    @include materialSymbols()
+}
+
 .dialog{
     @include padding(40px, 40px, 40px, 40px);
     width: 500px;
