--- a/src/app/shared/header/profile-navigation/profile-navigation.component.html
+++ b/src/app/shared/header/profile-navigation/profile-navigation.component.html
@@ -1,13 +1,14 @@
-<nav class="profil"> 
+<nav class="profile" [matMenuTriggerFor]="profilMenu"> 
     <div class="name">{{ (currentMember$ | async)?.name }}</div>
 
-    <div class="profilPicture">
+    <div class="profilePicture">
         <img [src]="(currentMember$ | async)?.imageUrl || './img/profile-pic/006.svg'" alt="Profile Picture">
         <div class="statusSymbol">
+            <img [src]="(currentMember$ | async)?.status == true ? '/img/profile-pic/online.svg' : '/img/profile-pic/offline.svg'" alt="Profile Picture">
         </div> 
     </div>
      
-    <div class="profilButton" mat-button [matMenuTriggerFor]="profilMenu">
+    <div class="profileButton" mat-button>
         @if(switchMobilOn){
             <mat-icon>keyboard_arrow_down</mat-icon>
         } @else {
@@ -16,8 +17,8 @@
     </div>
     <mat-menu #profilMenu="matMenu">
         <div class="mobilDekor"></div>
-        <div class="matMenu-item"><mat-icon class="outline">account_circle</mat-icon><button (click)="openDialog()" mat-menu-item>Profil</button></div>
-        <div class="matMenu-item" (click)="signOutUser()"><mat-icon class="outline">logout</mat-icon><button mat-menu-item>Log-Out</button></div>
-        <div class="matMenu-item"><mat-icon class="outline">{{ isDarkMode() ? 'wb_sunny' : 'dark_mode' }}</mat-icon><button mat-menu-item (click)="toggleTheme()">{{ isDarkMode() ? 'Hell' : 'Dunkel' }}</button></div>
+        <div class="matMenu-item"><mat-icon class="outline">account_circle</mat-icon><button (click)="openDialog()" mat-menu-item>Profile</button></div>
+        <div class="matMenu-item" (click)="signOutUser()"><mat-icon class="outline">logout</mat-icon><button mat-menu-item>Log-out</button></div>
+        <div class="matMenu-item"><mat-icon class="outline">{{ isDarkMode() ? 'wb_sunny' : 'dark_mode' }}</mat-icon><button mat-menu-item (click)="toggleTheme()">{{ isDarkMode() ? 'Light-Mode' : 'Dark-Mode' }}</button></div>
     </mat-menu>
 </nav>
