--- a/src/app/shared/header/profile-navigation/profile-navigation.component.scss
+++ b/src/app/shared/header/profile-navigation/profile-navigation.component.scss
@@ -1,9 +1,8 @@
 @import '../../../../mixin.scss';
 
-.profil{
+.profile{
     @include dFlex;
     flex-wrap: nowrap;
-
     .name{
         @include figtree($fw: 500, $fs: 24px, $c: var(--text-black));
         text-wrap: nowrap;
@@ -13,15 +12,12 @@
             display: none;
         }
     }
-
-    .profilButton{
+    .profileButton{
         width: 100%;
         padding: 0px 16px;
-
         @include respond-to-maxWidth(large) {
             padding: 0px 0px;
         }
-
         img{
             display: flex;
             align-items: center;
@@ -40,13 +36,21 @@
             }
         }
     }
-
     mat-icon{
         @include materialSymbols($c: var(--text-black), $fs: 24px);
     }
+    &:hover{
+        cursor: pointer;
+        .profilePicture{
+            border: 4px solid #92C83E;
+            box-sizing: border-box;
+            border-radius: 100px;
+        }
+    }
 }
 
-.profilPicture{
+.profilePicture{
+    transition: border 0.125s ease-in-out;
    @include heightWidth($w: 70px, $h: 70px);
     position: relative;
     @include respond-to-maxWidth(large) {
@@ -60,7 +64,11 @@
     }
 
     .statusSymbol{
-        @include statusSymbol;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        height: 16px;
+        width: 16px;
     }
 }
 
@@ -74,4 +82,13 @@
 
 
    border-top-right-radius: 0px !important;
+}
+
+
+::ng-deep .mat-mdc-menu-content .mat-mdc-menu-item .mat-mdc-menu-item-text{
+    color: var(--text-black) !important;
+    transition: color 0.1s ease-in-out;
+    &:hover{
+        color: var(--purple-1) !important;
+    }
 }
