--- a/src/app/main-content/login/login.component.scss
+++ b/src/app/main-content/login/login.component.scss
@@ -1,10 +1,43 @@
 @import '../../../mixin.scss';
 .MainWrapper{
-    @include heightWidth($w: 100%, $h: 100dvh);
+    @include heightWidth($w: 100%, $h:100%);
     @include dFlex;
     flex-direction: column;
     justify-content:flex-start;
     gap: 1%;
+}
+
+.logo-mainWrapper{
+    width: 100%;
+    height: 0px;
+    @include dFlex;
+
+    .max-wrapper{
+        width: 100%;
+        max-width: 1920px;
+        @include respond-to-maxWidth(medium) {
+            @include dFlex;
+            justify-content: center;
+            align-items: center;
+            transition: justify-content 1s ease-in-out;
+        }
+    }
+}
+
+.logo{
+    @include respond-to-maxWidth(medium) {
+        @include dFlex;
+        margin-top: 120px;
+        padding-left: 0px;
+    }
+    padding-left: 36px;
+    padding-top: 32px;
+    margin-top: 126px;
+    width: 256px;
+    img{
+        width: 100%;
+        object-fit: contain;
+    }
 }
 
 
@@ -146,3 +179,5 @@
       justify-content: start;
     }
   }
+
+
