message image uploade message reaction popup chat thread and direct message responsive

--- a/src/app/main-content/message/message-images/message-images.component.scss
+++ b/src/app/main-content/message/message-images/message-images.component.scss
@@ -19,6 +19,10 @@
         object-fit: cover;
         object-position: center;
 
+        @media(max-width: 440px) {
+            height: 100%;
+            width: 100%;
+        }
     }
 
     .edit-images {
