--- a/src/app/main-content/thread/thread.component.html
+++ b/src/app/main-content/thread/thread.component.html
@@ -6,7 +6,7 @@
             [threadFirstMessage]="isThreadFirstMessage" ></app-message>
 
             <div class="between-line-container">
-                <p>{{threadService.threadMessages.length}} Antworten</p>
+                <p>{{threadService.threadMessages.length}} Answers</p>
             <div class="between-line"></div>
             </div>
 
