--- a/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
+++ b/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
@@ -14,7 +14,7 @@
    ></app-images-preview>
 
   <div class="message-field-container">
-    <textarea placeholder="Naricht an #Entwicklerteam" [(ngModel)]="messageField" (input)="onInput($event)"></textarea>
+    <textarea placeholder="Message to #{{auth.currentChannelData.title}}" [(ngModel)]="messageField" (input)="onInput($event)" (keydown)="checkEnterKey($event)"></textarea>
 
     <div class="message-options-container">
 
@@ -30,7 +30,7 @@
         <button (click)="addTag()"><mat-icon>alternate_email</mat-icon></button>
       </div>
 
-      <button [disabled]="!(imagePreviews.length > 0 || messageField.length > 0)" class="send-btn"
+      <button [disabled]="!(storageService.messageImages.length > 0 || messageField.length > 0)" class="send-btn"
         (click)="handleSendMessage()"><mat-icon>send</mat-icon></button>
     </div>
 
