--- a/src/app/main-content/message/message-reation/message-reation.component.scss
+++ b/src/app/main-content/message/message-reation/message-reation.component.scss
@@ -1,6 +1,10 @@
 @import '../../../../mixin.scss';
 
 .reaction-container {
+    width: 100%;
+    gap: 10px;
+    display: flex;
+    flex-wrap: wrap;
 
     button {
         @include dFlex();
@@ -10,15 +14,14 @@
         border-radius: 20px;
         padding: 3px 7px;
         background-color: var(--secundary-bg);
-        margin-right: 10px;
         margin-top: 10px;
         cursor: pointer;
 
         img {
-            height: 100%
+            height: 100%;
         }
 
-        p {
+        .reaction-number-text {
             @include nunito($fw: 400, $fs: 18px, $c: var(--text-black));
             margin-left: 10px;
         }
@@ -26,25 +29,40 @@
         span {
             @include nunito($fw: 400, $fs: 18px, $c: var(--text-black));
         }
-    }
 
-    .add-reaction-btn {
-        margin-left: 10px;
-    }
-}
+        .show-members {
+            @include dFlex();
+            flex-direction: column;
+            width: 120px;
+            min-height: 60px;
+            background-color: var(--purple-1);
+            position: absolute;
+            bottom: 120%;
+            left: 50%;
+            border-radius: 20px 20px 20px 0px;
+            visibility: hidden;
+            opacity: 0;
+            transform: translateY(10px);
+            transition: all 0.2s ease;
+            padding: 10px;
 
-.show-members {
-    @include dFlex();
-    width: 100px;
-    height: auto;
-    min-height: 60px;
-    background-color: var(--purple-1);
-    position: absolute;
-    top: -70px;
-    left: 40px;
-    border-radius: 10px 10px 10px 0px;
+            img {
+                margin-bottom: 5px;
+            }
 
-    p {
-        @include nunito($fw: 400, $fs: 16px, $c: var(--text-black));
+            .reaction-names {
+                @include nunito($fw: 800, $fs: 16px, $c: var(--text-black));
+            }
+
+            .reaction-text {
+                @include nunito($fw: 400, $fs: 16px, $c: var(--text-black));
+            }
+        }
+
+        &:hover .show-members {
+            visibility: visible;
+            opacity: 1;
+            transform: translateY(0);
+        }
     }
 }
