--- a/src/app/main-content/message/message.component.html
+++ b/src/app/main-content/message/message.component.html
@@ -1,6 +1,9 @@
 <div class="new-message-container" [ngClass]="thread ? 'border-none' : 'border-top'">
     <div class="hover" (mousemove)="isMessageHover = true" (mouseleave)="resetHoverAndMenu()"
-        [ngClass]="messageService.checkUser(message) ? 'row-reverse' : ''">
+    [ngClass]="{
+        'row-reverse': messageService.checkUser(message),
+        'align-start': !messageService.checkUser(message)
+      }">
 
         <img class="profile-image" src="{{message.profileImage}}" alt=""
             [ngStyle]="messageService.checkUser(message) ? { 'margin-left' : '30px' } : { 'margin-right' : '30px' }">
