--- a/src/app/main-content/thread/thread.component.scss
+++ b/src/app/main-content/thread/thread.component.scss
@@ -15,7 +15,6 @@ section {
 .main-message-container {
     @include heightWidth($h: 70%);
     box-sizing: border-box;
-    padding: 0px 20px;
     overflow-y: auto;
     scrollbar-width: none;
 }
@@ -33,14 +32,19 @@ app-thread-message-field {
 .between-line-container {
 width: 100%;
 @include dFlex($jc: space-between);
+box-sizing: border-box;
+padding: 0 15px;
+margin-bottom: 10px;
     p {
         @include nunito($fw: 400, $fs: 16px, $c: var(--border-light-purple));
         left: 0;
         top: -10px;
+        margin-right: 10px;
     }
 
     .between-line {
-        width: 60%;
+        width: auto;
+        flex: 1;
         border: 1px solid var(--border-light-purple);
     }
 }
