--- a/src/app/main-content/message/message-text/message-text.component.scss
+++ b/src/app/main-content/message/message-text/message-text.component.scss
@@ -40,8 +40,8 @@
 
     .edit-info-text {
         position: absolute;
-        bottom: 50px;
-        left: 30px;
+        bottom: 30px;
+        left: 15px;
         @include nunito($fw: 400, $fs: 12px, $c: var(--text-black));
 
         span {
@@ -54,6 +54,11 @@
         }
     }
 }
+
+.edit-thread-text {
+    bottom: 0px !important;
+}
+
 
 .myMessage {
     background-color: var(--purple-2);
