--- a/src/app/dialog/edit-channel/edit-channel.component.scss
+++ b/src/app/dialog/edit-channel/edit-channel.component.scss
@@ -1,7 +1,7 @@
 @import '../../../mixin.scss';
 
 mat-icon{
-    @include materialSymbols()
+    @include materialSymbols(black, 16px)
 }
 
 .dialog{
@@ -31,6 +31,7 @@ h2{
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    display: flex;
 }
 
 .tagIcon{
@@ -47,6 +48,7 @@ h3{
     overflow: hidden;
     white-space: nowrap;
     max-width: 360px;
+    display: flex;
 }
 
 p {
