--- a/src/app/shared/header/searchbar/searchbar.component.scss
+++ b/src/app/shared/header/searchbar/searchbar.component.scss
@@ -1,7 +1,7 @@
 @import '../../../../mixin.scss';
 
 .searchbar{
-    @include dFlex;  
+    @include dFlex();  
     margin-left: auto;
     margin-right: auto;
     background-color: var(--secundary-bg);
@@ -10,6 +10,7 @@
     height: 70px;
     border-radius: 46px;
     border: 1px solid var(--secundary-bg);
+    position: relative;
 
     @include respond-to-maxWidth(large) {
         height: 45px;
@@ -68,5 +69,119 @@
             color: var(--text-black);
         }
     }
-    
+}
+
+.dropdown {
+    position: absolute;
+    background: var(--primary-bg);
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    max-height: 200px;
+    overflow-y: auto;
+    z-index: 10;
+    top: 72px;
+    left: 24px;
+    @include padding(8px, 16px, 8px, 16px);
+    @include nunito(400, 18px, var(--text-black));
+    border-radius: 30px;
+    border-top-left-radius: 4px;
+    width: 440px;
+    /* Custom scrollbar styling */
+    &::-webkit-scrollbar {
+        width: 8px; /* Breite des Scrollbalkens */
+    }
+    &::-webkit-scrollbar-track {
+        background-color: transparent; /* Transparenter Track */
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--purple-2); /* Farbe des Thumbs */
+        border-radius: 30px; /* Rundungen für den Thumb */
+        transition: background-color 0.125s ease; /* Sanfter Übergang beim Hover */
+    }
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: var(--purple-1); /* Hover-Farbe des Thumbs */
+        cursor: grab;
+    }
+}
+
+
+
+span{
+  @include dFlex (center, center);
+  mat-icon{
+      margin-right: 8px;
+  }
+}
+
+.dropdown div {
+  cursor: pointer;
+  border-radius: 30px;
+  width: fit-content;
+  margin-top: 4px;
+}
+
+.dropdown > div.active {
+    background-color: var(--secundary-bg) !important;
+    color: var(--purple-1) !important;
+  }
+
+  .dropdown div.active span {
+    background-color: var(--secundary-bg) !important;
+    color: var(--purple-1) !important;
+  }
+
+
+.contact, span {
+    background-color: var(--primary-bg);
+    transition: background-color 0.125s ease-in-out;
+    border-radius: 50px;
+    @include dFlex(start, center);
+    gap: 16px;
+    @include padding (8px, 24px, 8px, 24px);
+    width: fit-content;
+    @include nunito (400, 18px, black);
+    color: var(--text-black) !important;
+    transition: background-color 0.2s ease, color 0.2s ease;
+    &:hover {
+        background-color: var(--secundary-bg) !important;
+        cursor: pointer;
+        color: var(--purple-1) !important;
+        span{
+            background-color: var(--secundary-bg) !important;
+            cursor: pointer;
+            color: var(--purple-1) !important;
+        }
+    }
+    span{
+        @include padding (0px, 0px, 0px, 0px);
+    }
+}
+
+.dropdown div.active .contact {
+    background-color: var(--secundary-bg) !important;
+    color: var(--purple-1) !important;
+    transition: background-color 0.2s ease, color 0.2s ease;
+    span{
+        background-color: var(--secundary-bg) !important;
+        cursor: pointer;
+        color: var(--purple-1) !important;
+    }
+  }
+
+.contactPictureContainer {
+    position: relative;
+    @include dFlex(start, center)
+}
+
+.contactPicture{
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    object-fit: cover;
+}
+
+.onlineStatus {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
 }
