max-width to 1920px

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,25 +1,29 @@
 
-<app-main-header (backToDevSpaceEvent)="this.devSpaceAsTopLayer = true; this.devSpace.openNavBar()"></app-main-header>
-<div class="main-content">
-    <app-devspace 
-        #devSpace
-        [ngClass]="{
-        'focus-app-devSpace': devSpaceAsTopLayer
-        }">
-    </app-devspace>
-    <div class="main-content-wrapper">
-        <app-chat [ngClass]="{
-            'flexUnset': threadIsOpen,
-            'focus-app': chatAsTopLayer, 
-            'hidden': threadAsTopLayer
-            }"
-            (click)="this.devSpace.closeNavBar()">
-        </app-chat>
-        <app-thread  [ngClass]="{
-            'focus-app-thread': threadAsTopLayer, 
-            'visible': threadIsOpen,
-            }"
-            (click)="this.devSpace.closeNavBar()">
-        </app-thread>
+<div class="main-wrapper">
+    <div class="content-wrapper">
+    <app-main-header (backToDevSpaceEvent)="this.devSpaceAsTopLayer = true; this.devSpace.openNavBar()"></app-main-header>
+    <div class="main-content">
+        <app-devspace 
+            #devSpace
+            [ngClass]="{
+            'focus-app-devSpace': devSpaceAsTopLayer
+            }">
+        </app-devspace>
+        <div class="main-content-wrapper">
+            <app-chat [ngClass]="{
+                'flexUnset': threadIsOpen,
+                'focus-app': chatAsTopLayer, 
+                'hidden': threadAsTopLayer
+                }"
+                (click)="this.devSpace.closeNavBar()">
+            </app-chat>
+            <app-thread  [ngClass]="{
+                'focus-app-thread': threadAsTopLayer, 
+                'visible': threadIsOpen,
+                }"
+                (click)="this.devSpace.closeNavBar()">
+            </app-thread>
+        </div>
+    </div>
     </div>
 </div>
