some small, bugs fixes

--- a/src/app/main-content/login/reset-password/reset-password.component.scss
+++ b/src/app/main-content/login/reset-password/reset-password.component.scss
@@ -149,7 +149,9 @@ a{
     align-items: center;
 }
 
-  .step-back-button{
+step-back-button{
+    height: clamp(18px, 4vw, 24px);
+    width: clamp(18px, 4vw, 24px);
     @include materialSymbols;
     font-size: 24px;
     color: var(--text-black);
@@ -159,15 +161,17 @@ a{
     padding: 13px 13px;
     border: 1px solid transparent;
     position: absolute;
-
-    top: 8px;
+    top: calc((100% - 26px - 24px) / 2);
     left: 0px;
+
+    mat-icon{
+        font-size: clamp(18px, 4vw, 24px);
+    }
 
     &:hover{
         color: var(--text-blue);
         border-color: var( --purple-3);
         cursor: pointer;
-        background-color: transparent;
     }
 
     @include respond-to-maxWidth(smallMedium) {
