--- a/src/app/main-content/login/lost-password/lost-password.component.scss
+++ b/src/app/main-content/login/lost-password/lost-password.component.scss
@@ -81,6 +81,8 @@ button{
 }
 
 .step-back-button{
+    height: clamp(18px, 4vw, 24px);
+    width: clamp(18px, 4vw, 24px);
     @include materialSymbols;
     font-size: 24px;
     color: var(--text-black);
@@ -92,6 +94,10 @@ button{
     position: absolute;
     top: calc((100% - 26px - 24px) / 2);
     left: 0px;
+
+    mat-icon{
+        font-size: clamp(18px, 4vw, 24px);
+    }
 
     &:hover{
         color: var(--text-blue);
