--- a/src/app/main-content/login/sign-up/sign-up.component.scss
+++ b/src/app/main-content/login/sign-up/sign-up.component.scss
@@ -145,6 +145,8 @@ a{
 }
 
 .step-back-button{
+    height: clamp(18px, 4vw, 24px);
+    width: clamp(18px, 4vw, 24px);
     @include materialSymbols;
     font-size: 24px;
     color: var(--text-black);
@@ -156,6 +158,10 @@ a{
     position: absolute;
     top: calc((100% - 26px - 24px) / 2);
     left: 0px;
+
+    mat-icon{
+        font-size: clamp(18px, 4vw, 24px);
+    }
 
     &:hover{
         color: var(--text-blue);
