head-search-function upgrade: coordination with hints, arrowfunction and click for the input value (query)

--- a/src/app/shared/header/searchbar/searchbar.component.html
+++ b/src/app/shared/header/searchbar/searchbar.component.html
@@ -4,6 +4,7 @@
       [placeholder]="placeholder" 
       [(ngModel)]="searchQuery" 
       (input)="onSearchInput(searchQuery)" 
+      (click)="onSearchInput(searchQuery)"
       (keydown.arrowUp)="navigateDropdown(-1)" 
       (keydown.arrowDown)="navigateDropdown(1)" 
       (keydown.enter)="selectDropdownItem()" 
@@ -16,12 +17,15 @@
   <div class="dropdown" *ngIf="showDropdown || displayHints">
 
     @if(this.displayHints){
-        <div *ngFor="let hint of allHints">
-          <span><mat-icon>info</mat-icon>{{ hint }}</span>
-        </div>
+      <div class="dropDownItem" *ngFor="let hint of allHints; let i = index" 
+           [class.active]="i === activeDropdownIndex" 
+           (click)="selectDropdownItem()"
+           (mouseover)="setActiveDropdownIndex(i)">
+        <span><mat-icon>info</mat-icon>{{ hint }}</span>
+      </div>
     } @else {
       <div *ngIf="members.length > 0">
-        <div *ngFor="let member of members; let i = index" [class.active]="i === activeDropdownIndex" (click)="selectDropdownItem()" >
+        <div class="dropDownItem" *ngFor="let member of members; let i = index" [class.active]="i === activeDropdownIndex" (click)="selectDropdownItem()" (mouseover)="setActiveDropdownIndex(i)">
           <div class="contact">
             <div class="contactPictureContainer">
               <img class="contactPicture" [src]="member.imageUrl" alt="User picture" *ngIf="member.imageUrl">
@@ -33,13 +37,13 @@
       </div>
     
       <div *ngIf="channels.length > 0">
-        <div *ngFor="let channel of channels; let i = index" [class.active]="i === activeDropdownIndex" (click)="selectDropdownItem()">
+        <div class="dropDownItem" *ngFor="let channel of channels; let i = index" [class.active]="i === activeDropdownIndex" (click)="selectDropdownItem()" (mouseover)="setActiveDropdownIndex(i)">
           <span>{{ channel.title }}</span>
         </div>
       </div>
     
       <div *ngIf="messages.length > 0">
-        <div *ngFor="let message of messages; let i = index" [class.active]="i === activeDropdownIndex" (click)="selectDropdownItem()">
+        <div class="dropDownItem" *ngFor="let message of messages; let i = index" [class.active]="i === activeDropdownIndex" (click)="selectDropdownItem()" (mouseover)="setActiveDropdownIndex(i)">
           <span>{{ message.message }}</span>
         </div>
       </div>
